@@ -70,7 +70,7 @@ class StandardRerankerTest {
                 List.of(new RetrievalResult("doc one", 0.0), new RetrievalResult("doc two", 0.0)),
                 2);
 
-        assertEquals("doc two", results.getFirst().getText());
+        assertEquals("doc two", results.get(0).getText());
     }
 
     @Test
